<resources>
    <string name="app_name">FirstApp</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btnLimpar">Limpar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="txt_Login">Login</string>
    <string name="txt_Senha">Senha</string>
    <string name="message_conexao_success">Conexão Bem Sucessida!</string>
    <string name="message_ok">OK</string>
    <string name="txt_nome">Nome</string>
    <string name="btn_cadastraraposta">Cadastrar Aposta</string>
    <string name="btn_consultarapostas">Consultar Suas Apostas</string>
    <string name="txt_Team1">1º Time</string>
    <string name="txt_Team2">2º Time</string>
    <string name="txt_qntap">Quantidade apostada</string>
    <string name="txt_valorret">Valor de Retirada</string>
    <string name="btn_confirmar">Confirmar</string>
</resources>
